--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.font-sunda {
+    font-family: 'Noto Sans Sundanese', sans-serif;
+}
